Update and rename catpicky.yml to catpicky.html

--- a/catpicky.html
+++ b/catpicky.html
@@ -1,8 +1,17 @@
-theme: jekyll-theme-cayman
-title: Catpicky's homepage
-description: Have you ever had a hard time choosing the right litter box for your cat?
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Most Common Types Of Cat Litter Boxes And Recommendations - Catpicky</title>
+	<style> 
+		body { margin: 0; } .container { padding-bottom: 100px; background-color: #ffffff; max-width: 800px; padding: 0 10px; margin: 0 auto; margin-bottom: 150px; position: relative; } h1 { text-align: center; padding: 50px 0; color: #ffffff; font-size: 28px; background: #1b75ba; margin: 0; text-transform: capitalize; } h2 { color: #1b75ba; font-size: 24px; } a, a:hover { color: #1b75ba; } * {    font-family: Arial, Helvetica, sans-serif !important;} path.elementor-shape-fill { fill: #fff; } .tp-ft-top { background: #1b75ba; } .footer { background: #1b75ba; color: #fff; padding: 40px 0; text-align: center; }
+	</style>
+</head>
+<body>
 
 <h1>Most Common Types Of Cat Litter Boxes And Recommendations - Catpicky</h1>
+  
+<div class="container">
 
 <p>Have you ever had a hard time choosing the right litter box for your cat? When we’re still a novice to pet care and picking toilets for our small bosses, we had no idea which one we should go for! There are too many types of cat litter boxes out there:the litter pan, the cat’s house, the dome box, etc. So exactly, how can we choose the right one for both our kitties and us? “It may be difficult to find the perfect litter box, so we looked at dozens of litter boxes and litter pans to find the best, highest quality and most durable litter box based on price, designs and whether they were self-cleaning.” April R. Natal, Authority & Blogger of Catpicky <a href="https://catpicky.com/">https://catpicky.com</a></p>
 
@@ -77,3 +86,7 @@ Serve for multiple cats’ use</p>
 <h2>The Verdict</h2>
 
 <p>Take time, be patient to look for any signs from your cat that show whether she/he loves the current litter box or not! Since there are so many types of cat litter boxes out there, you can always have more than one around your house to see which will he choose. Good luck with your very first cat bathroom!</p>
+  
+</div>
+</body>
+</html>
